Upgrade to dylibbundler 0.4.4

--- a/data/MacOSX/dylibbundler/index.html
+++ b/data/MacOSX/dylibbundler/index.html
@@ -1,11 +1,37 @@
 <html>
 <body>
 
+<!--- REMOVE -->
+<a href="http://sourceforge.net/projects/macdylibbundler/"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=186987&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
+<!------------->
 
+<table align="center" width="75%" bgcolor="#EEEEEE" border="1" >
+<tr><td>
+
+<center><h3>New! <i>Captain MacLib</i> QuickLook plugin</h3></center>
+<table border="0" widh ="100%">
+<tr>
+<td width="25%" align="center"> <img src="maclib.jpg"/><br/>&nbsp; </td>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td>
+Use this simple Quicklook plugin to instantly get info about any library/executable, including architectures and dependencies.
+
+<list>
+<li/>
+<A href="http://downloads.sourceforge.net/macdylibbundler/CaptainMacLib0.1_Build.zip">Download CaptainMacLib v0.1 now</A>
+<li/>
+<A href="http://downloads.sourceforge.net/macdylibbundler/CaptainMacLib0.1_Src.zip">Get the source code</A></list>
+
+</td></tr></table>
+
+</td></tr>
+</table>
 
 <center>
 <h2>mac dylib bundler</h2>
-
+<!--- REMOVE -->
+<img src="dylibbundler.png"/>
+<!------------->
 </center>
 
 <h3>About</h3>
@@ -26,6 +52,14 @@ It usually involves 2 actions :
 </ul>
 </blockquote>
 
+<!--- REMOVE -->
+<h3>Download</h3>
+<blockquote>
+<A href="http://downloads.sourceforge.net/macdylibbundler/dylibbundler0.4.4.zip">Download version 0.4.4 now</A><br/>
+dylibbundler is not yet considered stable but already usable.<br/>
+<b>Note that version 0.3 is not compatible with version 0.25, as it makes no more use of config files and the terminal syntax has changed a little.</b>
+</blockquote>
+<!------------->
 
 <h3>Installation</h3>
 <blockquote>
