WebSocket: Implement receiving "transport-rolling" and "frame"

--- a/data/websocket_resources/ssr-test-client.html
+++ b/data/websocket_resources/ssr-test-client.html
@@ -24,6 +24,9 @@ var examples = [
   ["state", {"ref-rot": [0, 0, 0.7071, 0.7071]}],
   ["state", {"ref-rot": [0, 0, -0.7071, 0.7071]}],
   ["state", {"ref-rot": [0, 0, 0, 1]}],
+  ["state", {"transport-rolling": true}],
+  ["state", {"transport-rolling": false}],
+  ["state", {"frame": 500000}],
   ["state", {"processing": true}],
   ["state", {"processing": false}],
   ["state", {"auto-rotate-sources": true}],
