WebSocket: Support for resetting tracker

--- a/data/websocket_resources/ssr-test-client.html
+++ b/data/websocket_resources/ssr-test-client.html
@@ -31,6 +31,7 @@ var examples = [
   ["state", {"processing": false}],
   ["state", {"auto-rotate-sources": true}],
   ["state", {"auto-rotate-sources": false}],
+  ["state", {"tracker": "reset"}],
   ["new-src", [{"port-number": 1, "id":"jack1", "name": "JACK port 1",
     "pos": [-1, -1, 0]}]],
   ["mod-src", {"jack1":{"pos": [-2, -1, 0], "mute": true}}],
