Allow sources to be activated/deactivated

--- a/data/websocket_resources/ssr-test-client.html
+++ b/data/websocket_resources/ssr-test-client.html
@@ -126,6 +126,7 @@ function connectWebSocket()
             li.innerHTML =
               `ID: <span class="src-id">${src_id}</span>; ` +
               'name: <span class="src-name">n/a</span>; ' +
+              'active: <span class="src-active">n/a</span>; ' +
               'mute: <span class="src-mute">n/a</span>; ' +
               'model: <span class="src-model">n/a</span>; ' +
               'fixed: <span class="src-fixed">n/a</span><br>' +
