WebSocket: Change syntax of incoming "new-src" message
... to be consistent with the outgoing one and with "mod-src".

--- a/data/websocket_resources/ssr-test-client.html
+++ b/data/websocket_resources/ssr-test-client.html
@@ -39,8 +39,8 @@ var examples = [
   ["state", {"auto-rotate-sources": true}],
   ["state", {"auto-rotate-sources": false}],
   ["state", {"tracker": "reset"}],
-  ["new-src", [{"port-number": 1, "id":"jack1", "name": "JACK port 1",
-    "pos": [-1, -1, 0]}]],
+  ["new-src", {"jack1": {"port-number": 1, "name": "JACK port 1",
+    "pos": [-1, -1, 0]}}],
   ["mod-src", {"jack1":{"pos": [-2, -1, 0], "mute": true}}],
   ["del-src", ["jack1"]],
   ["load-scene", "my-scene.asd"],
