Browser GUI: simplify server routes, add documentation to the manual

--- a/data/websocket_resources/ssr-test-client.html
+++ b/data/websocket_resources/ssr-test-client.html
@@ -334,6 +334,10 @@ textarea {
 
 <body onload="onLoad()">
   <h1>SoundScape Renderer Test Client</h1>
+
+  <p>
+    <a href="/">Launch 3D GUI</a>.
+  </p>
   <div>
     <input id="input-host" type="text" style="width: 8em"
            onkeydown="if (event.key === 'Enter') {
